2004-03-04  Not Zed  <NotZed@Ximian.com>

	* e-sexp.c: Added some debug stuff.

2004-02-27  Not Zed  <NotZed@Ximian.com>

	** See Bug #37329.

	* e-mktemp.c (get_dir): setup a comjpile time option for storing
	in the homedir, and also just use the uid as the key for a /tmp
	dir option.
	(e_mktemp_cleanup): removed entirely.
	(e_mkstemp, e_mkdtemp, e_mktemp): dont save the file/dirname in a
	list anymore.
	(expire_dir_rec): expire old temp data from previous runs/old data
	lying around.  Based on access time.
	(get_dir): run an expirey every now and then.

2004-02-25  Jeffrey Stedfast  <fejj@ximian.com>

	* e-gui-utils.c (e_icon_for_mime_type): Protect against feeding
	gdk_pixbuf_new_from_file() a NULL path. Clears up some console
	warning spewage.

2004-02-19  Not Zed  <NotZed@Ximian.com>

	* e-pilot-util.c: include string.h, fixes 64 bit crash.  From
	David Mosberger.

2004-02-03  Chris Toshok  <toshok@ximian.com>

	* e-html-utils.c (e_text_to_html_full): add callto:, h323:, and
	webcal: schemes.

2004-01-26  JP Rosevear <jpr@ximian.com>

	* e-folder-map.c (e_folder_map_dir): use g_file_test instead of
	stat and pass the type e_folder_map_dir when recursing

2004-01-24  JP Rosevear <jpr@ximian.com>

	* e-folder-map.c: turn off debugging

2004-01-24  Chris Toshok  <toshok@ximian.com>

	* e-folder-map.c (e_folder_map_dir): use GDir/g_build_filename,
	and g_file_test.
	(e_folder_map_local_folders): same.

2004-01-23  JP Rosevear <jpr@ximian.com>

	* Makefile.am: build new sources

	* e-folder-map.[hc]: builds a list of 1.4 folder paths of a
	certain type

2004-01-20  JP Rosevear <jpr@ximian.com>

	* Makefile.am: don't build dead files

	* e-xml-hash-utils.[hc]: kill, these were moved to e-d-s long ago

2004-01-14  Jeffrey Stedfast  <fejj@ximian.com>

	* e-bconf-map.[c,h]: New source files for mapping bonobo-conf keys
	to gconf keys. Moved out of shell/e-config-upgrade.c

2004-01-13  Not Zed  <NotZed@Ximian.com>
