@@ -65,6 +65,7 @@ e_request_string (GtkWindow *parent,
 					      GTK_STOCK_CANCEL, GTK_RESPONSE_CANCEL,
 					      GTK_STOCK_OK, GTK_RESPONSE_OK,
 					      NULL);
+	gtk_dialog_set_has_separator (GTK_DIALOG (dialog), FALSE);
 	gtk_dialog_set_default_response (GTK_DIALOG (dialog), GTK_RESPONSE_OK);
 	gtk_window_set_default_size (GTK_WINDOW (dialog), 275, -1);
 	gtk_container_set_border_width (GTK_CONTAINER (dialog), 6); 
