@@ -1,3 +1,10 @@
+2004-03-04  William Jon McCann  <mccann@jhu.edu>
+
+	* e-dialog-utils.c (e_notice, e_notice_with_xid, save_ok): 
+	* e-request.c (e_request_string): 
+	* e-passwords.c (e_passwords_ask_password):
+	Remove separator from dialogs per HIG.
+
 2004-03-04  Not Zed  <NotZed@Ximian.com>
 
 	* e-sexp.c: Added some debug stuff.
